7/7/23 Data class Builders

--- a/CH3, 4, 5.ipynb
+++ b/CH3, 4, 5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9b387e49",
+   "id": "dabc0807",
    "metadata": {},
    "source": [
     "Hash tables are the engines behind Python’s high-performance dicts. Other built-in types based on hash tables are set and frozenset."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "84f0d7d3",
+   "id": "113daeae",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cdda27a7",
+   "id": "5a4d2fbc",
    "metadata": {},
    "outputs": [
     {
@@ -62,17 +62,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dfdd7fda",
+   "metadata": {},
+   "source": [
+    "An object is hashable if it has a hash code which never changes during its lifetime (it needs a __hash__() method), and can be compared to other objects (it needs an __eq__() method). Hashable objects which compare equal must have the same hash\n",
+    "code. Numeric types and flat immutable types str and bytes are all hashable. Container types are hashable if they are immutable and all contained objects are also hashable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e698df5",
+   "metadata": {},
+   "source": [
+    "# Ch 5: Data Class Builders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b59870c",
+   "metadata": {},
+   "source": [
+    "Python offers a few ways to build a simple class that is just a collection of fields, with little or no extra functionality. That pattern is known as a “data class”—and data classes is one of the packages that supports this pattern. Three\n",
+    "different class builders that you may use as shortcuts to write data classes:\n",
+    "1) collections.namedtuple: The simplest way—available\n",
+    "2) typing.NamedTuple: requires type hints on the fields—since\n",
+    "3) @dataclasses.dataclass: A class decorator that allows more customization than previous alternatives, adding lots of options and potential complexity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2906564d",
+   "id": "f7f6556b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "An object is hashable if it has a hash code which never changes during its lifetime (it\n",
-    "needs a __hash__() method), and can be compared to other objects (it needs an\n",
-    "__eq__() method). Hashable objects which compare equal must have the same hash\n",
-    "code. Numeric types and flat immutable types str and bytes are all hashable. Container\n",
-    "types are hashable if they are immutable and all contained objects are also hashable."
+    "# Traditional Data class\n",
+    "class Coordinate:\n",
+    " def __init__(self, lat, lon):\n",
+    "     self.lat = lat\n",
+    "     self.lon = lon\n",
+    "    \n",
+    "    "
    ]
   }
  ],
