--- a/CH3, 4, 5.ipynb
+++ b/CH3, 4, 5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dabc0807",
+   "id": "3d5f5272",
    "metadata": {},
    "source": [
     "Hash tables are the engines behind Python’s high-performance dicts. Other built-in types based on hash tables are set and frozenset."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "113daeae",
+   "id": "a811866d",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5a4d2fbc",
+   "id": "7398a1c3",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfdd7fda",
+   "id": "6b730337",
    "metadata": {},
    "source": [
     "An object is hashable if it has a hash code which never changes during its lifetime (it needs a __hash__() method), and can be compared to other objects (it needs an __eq__() method). Hashable objects which compare equal must have the same hash\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e698df5",
+   "id": "4db6c845",
    "metadata": {},
    "source": [
     "# Ch 5: Data Class Builders"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b59870c",
+   "id": "e3db8e0a",
    "metadata": {},
    "source": [
     "Python offers a few ways to build a simple class that is just a collection of fields, with little or no extra functionality. That pattern is known as a “data class”—and data classes is one of the packages that supports this pattern. Three\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7f6556b",
+   "id": "a8fe7532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,48 @@
     "     self.lat = lat\n",
     "     self.lon = lon\n",
     "    \n",
-    "    "
+    "# Collections named tuple\n",
+    "from collections import namedtuple\n",
+    "Coordinate = namedtuple('Coordinate', 'lat lon')\n",
+    "\n",
+    "# Typing named tuple\n",
+    "import typing\n",
+    "Coordinate = typing.NamedTuple('Coordinate',[('lat', float), ('lon', float)])\n",
+    "# typing.NamedTuple can also be used in a class statement.\n",
+    "from typing import NamedTuple\n",
+    "class Coordinate(NamedTuple):\n",
+    " lat: float\n",
+    " lon: float\n",
+    "    \n",
+    "# Dataclass Decorator\n",
+    "from dataclasses import dataclass\n",
+    "@dataclass(frozen=True)\n",
+    "class Coordinate:\n",
+    " lat: float\n",
+    " lon: float\n",
+    " def __str__(self):\n",
+    "     ns = 'N' if self.lat >= 0 else 'S'\n",
+    "     we = 'E' if self.lon >= 0 else 'W'\n",
+    "     return f'{abs(self.lat):.1f}°{ns}, {abs(self.lon):.1f}°{we}'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a7d1eaa",
+   "metadata": {},
+   "source": [
+    "Variable Annotation\n",
+    "var_name: some_type = a_value  (Syntax)\n",
+    "Type hints have no effect at runtime. But at import time—when a module is loaded, Python does read them to build the\n",
+    "__annotations__ dictionary that typing.NamedTuple and @dataclass then use to enhance the class.\n",
+    "\n",
+    "class DemoPlainClass:\n",
+    " a: int \n",
+    " b: float = 1.1 \n",
+    " c = 'spam'\n",
+    " \n",
+    " a,b,c can be a composition of class attribute and annotation depending on whether it is Collection named tuple, typing named tuple or Dataclass.\n",
+    " "
    ]
   }
  ],
