9/6/23 Character based RNN Scratch implementation

--- a/Chapter 4 + 5.ipynb
+++ b/Chapter 4 + 5.ipynb
@@ -55,27 +55,26 @@
    "source": [
     "dropout1, dropout2 = 0.2, 0.5\n",
     "class Net(nn.Module):\n",
-    "def __init__(self, num_inputs, num_outputs, num_hiddens1, num_hiddens2,\n",
-    "is_training = True):\n",
-    "super(Net, self).__init__()\n",
-    "self.num_inputs = num_inputs\n",
-    "self.training = is_training\n",
-    "self.lin1 = nn.Linear(num_inputs, num_hiddens1)\n",
-    "self.lin2 = nn.Linear(num_hiddens1, num_hiddens2)\n",
-    "self.lin3 = nn.Linear(num_hiddens2, num_outputs)\n",
-    "self.relu = nn.ReLU()\n",
-    "def forward(self, X):\n",
-    "H1 = self.relu(self.lin1(X.reshape((-1, self.num_inputs))))\n",
-    "# Use dropout only when training the model\n",
-    "if self.training == True:\n",
-    "# Add a dropout layer after the first fully connected layer\n",
-    "H1 = dropout_layer(H1, dropout1)\n",
-    "H2 = self.relu(self.lin2(H1))\n",
-    "if self.training == True:\n",
-    "    # Add a dropout layer after the second fully connected layer\n",
-    "H2 = dropout_layer(H2, dropout2)\n",
-    "out = self.lin3(H2)\n",
-    "return out\n",
+    "    def __init__(self, num_inputs, num_outputs, num_hiddens1, num_hiddens2,is_training = True):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.num_inputs = num_inputs\n",
+    "        self.training = is_training\n",
+    "        self.lin1 = nn.Linear(num_inputs, num_hiddens1)\n",
+    "        self.lin2 = nn.Linear(num_hiddens1, num_hiddens2)\n",
+    "        self.lin3 = nn.Linear(num_hiddens2, num_outputs)\n",
+    "        self.relu = nn.ReLU()\n",
+    "    def forward(self, X):\n",
+    "        H1 = self.relu(self.lin1(X.reshape((-1, self.num_inputs))))\n",
+    "        # Use dropout only when training the model\n",
+    "        if self.training == True:\n",
+    "        # Add a dropout layer after the first fully connected layer\n",
+    "            H1 = dropout_layer(H1, dropout1)\n",
+    "        H2 = self.relu(self.lin2(H1))\n",
+    "        if self.training == True:\n",
+    "            # Add a dropout layer after the second fully connected layer\n",
+    "            H2 = dropout_layer(H2, dropout2)\n",
+    "        out = self.lin3(H2)\n",
+    "        return out\n",
     "net = Net(num_inputs, num_outputs, num_hiddens1, num_hiddens2)\n"
    ]
   }
